--- a/index.html
+++ b/index.html
@@ -128,10 +128,8 @@
                 <img src="assets/img/astronaut_1.gif" class="about__img">
                 <div class="about__data">
                     <p class="about__description" id="home-about">
-                        I'm a passionate and dedicated Computer Science student specializing in Video Game Programming, and currently completing my graduation project. My focus is on creating immersive experiences that engage players and push the boundaries of what video games can achieve.
-                        I'm a huge fan of challenging action-adventure games My favorite games of all time are God of War, The Last of Us and The Legend of Zelda: The Wind Waker.
-
-
+                        Hi there!
+                        Welcome to my portfolio! I am Stephania an addict to coding. I like to create immersive experiences that engage players and push the boundaries of what video games can achieve. Please take a look at my latest work featured within the projects section and check out my resume. Feel free to contact me if you have any questions.
                     </p>
                 </div>
                 <div class="about__info">
