--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
 	<link rel="stylesheet" href="css/animate.css">
 
-	<link rel="icon" href="images/favicon.png">
+	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -73,7 +73,7 @@
 						<span class="subheading">Hey! I am</span>
 						<h1>Stephania Cortes</h1>
 						<h2>
-							Programmer <br>
+							Game Programmer <br>
 							<!-- Typing Carousel -->
 							<span class="txt-rotate" data-period="2000"
 								data-rotate='["C + +", "C #", "Unity", "Unreal Engine", "S Q L", ".Net", "WinForm", "Angular"]'></span>
