--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 								</a>
 							</li>
 							<li class="ftco-animate">
-								<a href="https://fetbarcelon.github.io/" target="_blank"><span class="fas fa-globe"></span></a>
+								<a href="https://fetbarcelon.github.io" target="_blank"><span class="fas fa-globe"></span></a>
 							</li>
 						</ul>
 					</div>
