--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 			</div>
 		</div>
 	</section>
-<!-- resume-section -->
+<!-- (education) resume-section -->
 <section class="ftco-section ftco-no-pb goto-here" id="resume-section">
 	<div class="container">
 		<div class="row">
