--- a/index.html
+++ b/index.html
@@ -235,12 +235,12 @@
 
 			<div class="row">
 				<div class="col-md-4 text-center d-flex ftco-animate">
-					<a class="services-1 shadow" href="https://github.com/fetbarcelon/" target="_blank"
+					<a class="services-1 shadow" href="https://github.com/fetbarcelon/PAC-MAN" target="_blank"
 						id="project-7">						
 						<div class="desc">
-							<h3 class="mb-4">C + +</h3>
+							<h3 class="mb-4">PAC-MAN</h3>
 							<p><strong> C + + </strong></p>
-							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow; </p>
+							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow; Tasks: <br> &RightArrow; Designing and coding the game mechanics. <br> &RightArrow; Creating the maze layout. <br> &RightArrow; + other tasks.</p>
 						</div>
 					</a>
 				</div>
@@ -305,8 +305,8 @@
 						<div class="desc">
 							<h3 class="mb-4">ZOMBIE HORDE</h3>
 							<p><strong>Blueprint | Unreal Engine 5</strong></p>
-							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow; Developed game scripts and behaviors for zombies, enhancing gameplay dynamics. <br> &RightArrow; Managed post-processing effects for visual enhancements. <br> &RightArrow; + other tasks.
-						</div>
+							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow; Developed game scripts and behaviors for zombies, enhancing gameplay dynamics. <br> &RightArrow; Managed post-processing effects for visual enhancements. <br> &RightArrow; + other tasks.</p>
+							</div>
 					</a>
 				</div>
 				<div class="col-md-4 text-center d-flex ftco-animate">
