--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					<h2 class="mb-4">Projects</h2>
 					<p>Some of my projects</p>
-					<p>Hover over each project to see more info</p>
+					<p>Hover over each project to see more information</p>
 				</div>
 			</div>
 
