--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							 Game Programmer <br>
 							<!-- Typing Carousel -->
 							<span class="txt-rotate" data-period="2000"
-								data-rotate='["C + +", "C #", "Unity", "Unreal Engine", "S Q L", ".Net", "WinForm", "Angular"]'></span>
+								data-rotate='["C + +", "C #", "Unity", "Unreal Engine", "S Q L", ".Net", "WinForm", "Godot"]'></span>
 						</h2>
 					</div>
 				</div>
