--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							 Game Programmer <br>
 							<!-- Typing Carousel -->
 							<span class="txt-rotate" data-period="2000"
-								data-rotate='["C + +", "C #", "Unity", "Unreal Engine","Godot"]'></span>
+								data-rotate='["Unity", "Unreal Engine","Godot", "C + +", "C #", "GDScript", "Python", "Blueprints"]'></span>
 						</h2>
 					</div>
 				</div>
