--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 	<link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
 	<link rel="stylesheet" href="css/animate.css">
-
-	<link rel="stylesheet" href="styles.css?v=2">
+	<!-- el navegador descarga la nueva versión.-->
+	<link rel="stylesheet" href="styles.css?v=3">
 	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -77,7 +77,7 @@
 							 Game Programmer <br>
 							<!-- Typing Carousel -->
 							<span class="txt-rotate" data-period="2000"
-								data-rotate='["Unity", "Unreal Engine","Godot", "C + +", "C #", "GDScript", "Python", "Blueprints"]'></span>
+								data-rotate='["Unity", "Unreal Engine","Godot", "Blueprints", "C #", "C + +", "GDScript", "Python"]'></span>
 						</h2>
 					</div>
 				</div>
