--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							 Game Programmer <br>
 							<!-- Typing Carousel -->
 							<span class="txt-rotate" data-period="2000"
-								data-rotate='["Unity", "Unreal Engine","Godot", "Blueprints", "C #", "C + +", "GDScript", "Python"]'></span>
+								data-rotate='["Unity", "Unreal Engine","Godot", "Blueprints", "C #", "C + +", "GDScript", "Python", "Java"]'></span>
 						</h2>
 					</div>
 				</div>
