--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 	<link rel="stylesheet" href="css/ionicons.min.css">
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/icomoon.css">
-	<link rel="stylesheet" href="css/style.css">
+	<!-- <link rel="stylesheet" href="css/style.css">-->
+	<link rel="stylesheet" href="/dist/styles.98f3a7.css">
 	<!-- For Progress Bars -->
 	<link rel="stylesheet" href="css/css-circular-prog-bar.css">
 </head>
@@ -100,11 +101,11 @@
 					<div class="row justify-content-start pb-3">
 						<div class="col-md-12 heading-section ftco-animate">
 							<h2 class="mb-4">About Me</h2>
-							<p>Hi there! <br> Welcome to my portfolio! I'm Stephania, passionate about coding. 
-                                I thrive on tackling significant challenges that make a difference in people's 
-                                lives. Please take a look at my latest work featured within the projects section 
-                                and check out my resume.
-								Feel free to contact me if you have any questions.</p>
+							<p><strong>Welcome to my portfolio!</strong><br>
+							I'm Stephania, a passionate game programmer driven by the challenge of building immersive and meaningful interactive experiences.  
+							I specialize in gameplay programming, debugging, and creating systems that enhance storytelling and player engagement.<br><br>
+							Explore my latest game projects and feel free to check out my resume.  
+							If you have any questions or would like to collaborate, don't hesitate to get in touch!</p>
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span> <span>Stephania Cortes</span></li>
 								<li class="d-flex"><span>Country: </span> <span>Canada</span></li>
