--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<!-- DOWNLOAD CV BUTTON -->
 					<div class="counter-wrap ftco-animate d-flex mt-md-3">
 						<div class="text">
-							<p><a href="https://www.linkedin.com/in/stephania-cortes/" target="_blank"
+							<p><a href="docs/CV.pdf" target="_blank"
 									class="btn btn-primary py-3 px-3">Check Resume</a>
 							</p>
 						</div>
