--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							 Game Programmer <br>
 							<!-- Typing Carousel -->
 							<span class="txt-rotate" data-period="2000"
-								data-rotate='["C + +", "C #", "Unity", "Unreal Engine","Godot", ".Net", "WinForm", "S Q L"]'></span>
+								data-rotate='["Unreal Engine", "Unity", "Blueprints", "Godot","C #", "C + +", "Python", "Java", "S Q L"]'></span>
 						</h2>
 					</div>
 				</div>
