--- a/index.html
+++ b/index.html
@@ -116,9 +116,8 @@
 					<!-- DOWNLOAD CV BUTTON -->
 					<div class="counter-wrap ftco-animate d-flex mt-md-3">
 						<div class="text">
-							<a href="docs/CV.pdf" download class="btn-download">Check Resume</a>
-							<!-- <p><a href="https://www.linkedin.com/in/stephania-cortes/" target="_blank"
-									class="btn btn-primary py-3 px-3">Check Resume</a>-->
+							<p><a href="CV.pdf" target="_blank"
+									class="btn btn-primary py-3 px-3">Check Resume</a>
 							</p>
 						</div>
 					</div>
