--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<!-- <link rel="stylesheet" href="css/style.css">-->
-	<link rel="stylesheet" href="/dist/styles.98f3a7.css">
+	<link rel="stylesheet" href="css/style.css">
 	<!-- For Progress Bars -->
 	<link rel="stylesheet" href="css/css-circular-prog-bar.css">
 </head>
