--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
 					<!-- DOWNLOAD CV BUTTON -->
 					<div class="counter-wrap ftco-animate d-flex mt-md-3">
 						<div class="text">
-							<p><a href="CV.pdf" target="_blank"
-									class="btn btn-primary py-3 px-3">Check Resume</a>
+							<p><a href="/CV.pdf" target="_blank" class="btn btn-primary py-3 px-3">Check Resume</a>
 							</p>
 						</div>
 					</div>
@@ -412,7 +411,7 @@
 								<a href="https://github.com/fetbarcelon" target="_blank"> <span class="fab fa-github"></span></a>
 							</li>
 							<li class="ftco-animate">
-								<a href="https://www.linkedin.com/in/stephania-cortes/" target="_blank"><span class="fab fa-linkedin"></span>
+								<a href="https://www..com/in/stephania-cortes/" target="_blank"><span class="fab fa-linkedin"></span>
 								</a>
 							</li>
 							<li class="ftco-animate">
