--- a/index.html
+++ b/index.html
@@ -102,14 +102,13 @@
 						<div class="col-md-12 heading-section ftco-animate">
 							<h2 class="mb-4">About Me</h2>
 							<p><strong>Welcome to my portfolio!</strong><br>
-							I'm Stephania, a passionate game programmer driven by the challenge of building immersive and meaningful interactive experiences.  
-							I specialize in gameplay programming, debugging, and creating systems that enhance storytelling and player engagement.<br><br>
-							Explore my latest game projects and feel free to check out my resume.  
-							If you have any questions or would like to collaborate, don't hesitate to get in touch!</p>
+							I'm Stephania, a passionate game programmer dedicated to crafting immersive and impactful interactive experiences. I specialize in gameplay systems, debugging, and building mechanics that support storytelling and deepen player engagement.<br><br>
+							Take a look at my latest projects and feel free to explore my resume.Got a question or an idea to collaborate? I'd love to hear from you!</p>
+							
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span> <span>Stephania Cortes</span></li>
 								<li class="d-flex"><span>Country: </span> <span>Canada</span></li>
-								<li class="d-flex"><span>City: </span> <span>Montreal</span></li>
+								<li class="d-flex"><span>City: </span> <span>Montreal/ Remote</span></li>
 							</ul>
 						</div>
 					</div>
