--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span> <span>Stephania Cortes</span></li>
 								<li class="d-flex"><span>Country: </span> <span>Canada</span></li>
-								<li class="d-flex"><span>City: </span> <span>Montreal/ Remote</span></li>
+								<li class="d-flex"><span>City: </span> <span>Montreal - Remote</span></li>
 							</ul>
 						</div>
 					</div>
