--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 						<div class="desc">
 							<h3 class="mb-4">ARMORED ASSAULT</h3>
 							<p><strong>Blueprint | Unreal Engine 5</strong></p>
-							<p style="text-align: left;"> &RightArrow;  <br> &RightArrow; Individual Project. <br> &RightArrow; Tasks: Engineered a teleportation system facilitating smooth transitions between distinct rooms, enhancing the game's immersive experience.<br> &RightArrow; Developed all game scripts and integrated them with game objects, ensuring seamless functionality and efficient performance.<br> &RightArrow; + other tasks.</p>
+							<p style="text-align: left;"> &RightArrow; Individual Project. <br> &RightArrow; Blueprints<br> &RightArrow; Tasks: Engineered a teleportation system facilitating smooth transitions between distinct rooms, enhancing the game's immersive experience.<br> &RightArrow; Developed all game scripts and integrated them with game objects, ensuring seamless functionality and efficient performance.<br> &RightArrow; + other tasks.</p>
 						</div>
 					</a>
 				</div>
