--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
 					<a class="services-1 shadow" href="https://github.com/fetbarcelon/"
 						target="_blank" id="project-8">						
 						<div class="desc">
-							<h3 class="mb-4">C + + </h3>
-							<p><strong> C + +</strong></p>
-							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow; Tasks: .</p>
+							<h3 class="mb-4">Knigth </h3>
+							<p><strong> Godot</strong></p>
+							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow; Tasks: Developed a responsive player controller with smooth movement, jumping, and gravity, providing a solid and intuitive gameplay feel. <br> &RightArrow; Integrated animations for idle, running, jumping, falling, and attacking using a state-based system to reflect real-time player actions. <br> &RightArrow; Designed and built the first level using a modular tileset, including platforms, gaps, and environmental hazards to challenge the player. <br> &RightArrow; Implemented a basic sword attack system with hit detection, damage handling, and visual/audio feedback to enhance combat engagement. <br> &RightArrow; Created a death detection system for hazards and pits, with a respawn feature and simple UI to improve game flow and replayability.</p>
 						</div>
 					</a>
 				</div>
