--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 						<div class="desc">
 							<h3 class="mb-4">Knigth </h3>
 							<p><strong> Godot</strong></p>
-							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow; Tasks: Developed a responsive player controller with smooth movement, jumping, and gravity, providing a solid and intuitive gameplay feel. <br> &RightArrow; Integrated animations for idle, running, jumping, falling, and attacking using a state-based system to reflect real-time player actions. <br> &RightArrow; Designed and built the first level using a modular tileset, including platforms, gaps, and environmental hazards to challenge the player. <br> &RightArrow; Implemented a basic sword attack system with hit detection, damage handling, and visual/audio feedback to enhance combat engagement. <br> &RightArrow; Created a death detection system for hazards and pits, with a respawn feature and simple UI to improve game flow and replayability.</p>
+							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow; Tasks: Developed smooth player movement with jumping, falling, and responsive state transitions. <br> &RightArrow; Designed and built the first level using a modular tileset, including platforms, gaps, and environmental hazards to challenge the player. <br> &RightArrow; Designed a tile-based level with hazards and built a respawn system for consistent game flow.</p>
 						</div>
 					</a>
 				</div>
@@ -283,7 +283,7 @@
 						<div class="desc">
 							<h3 class="mb-4">ARMORED ASSAULT</h3>
 							<p><strong>Blueprint | Unreal Engine 5</strong></p>
-							<p style="text-align: left;"> &RightArrow; Individual Project. <br> &RightArrow; Blueprints<br> &RightArrow; Tasks: Engineered a teleportation system facilitating smooth transitions between distinct rooms, enhancing the game's immersive experience.<br> &RightArrow; Developed all game scripts and integrated them with game objects, ensuring seamless functionality and efficient performance.<br> &RightArrow; + other tasks.</p>
+							<p style="text-align: left;"> &RightArrow; Individual Project. <br> &RightArrow; Blueprints<br> &RightArrow; Tasks: Developed core gameplay mechanics and player input handling using Blueprints to ensure responsive and intuitive controls. <br> &RightArrow; Created a teleportation system to enable seamless player movement across the environment. <br> &RightArrow; Implemented real-time UI elements to display player status and critical game information during gameplay.</p>
 						</div>
 					</a>
 				</div>
@@ -305,7 +305,7 @@
 						<div class="desc">
 							<h3 class="mb-4">ZOMBIE HORDE</h3>
 							<p><strong>Blueprint | Unreal Engine 5</strong></p>
-							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow; Developed game scripts and behaviors for zombies, enhancing gameplay dynamics. <br> &RightArrow; Managed post-processing effects for visual enhancements. <br> &RightArrow; + other tasks.</p>
+							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow; Built the main menu interface using UMG, including functional Start and Quit buttons with responsive design. <br> &RightArrow; Designed a cohesive horror atmosphere through custom visuals, lighting, and post-processing effects to enhance immersion. <br> &RightArrow; Implemented Blueprint logic to manage scene transitions, game startup, and exit functionality, fully integrating the UI with gameplay flow.</p>
 							</div>
 					</a>
 				</div>
@@ -315,7 +315,7 @@
 						<div class="desc">
 							<h3 class="mb-4"> Bouncing Ball</h3>
 							<p><strong>Unity | C #</strong></p>
-							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow;&RightArrow; Individual Project.<br> &RightArrow;  Project done, for the GE2023</p>
+							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow;&RightArrow; Individual Project. <br> &RightArrow; Programmed responsive bouncing mechanics using physics forces and timed impulses. <br> &RightArrow; Designed a minimalistic neon environment with glowing materials and a clean UI (including minimap). <br> &RightArrow; Added visual effects like trails, glow, and lighting to enhance feedback and futuristic style.</p>
 						</div>
 					</a>
 				</div>
@@ -325,7 +325,7 @@
 						<div class="desc">
 							<h3 class="mb-4"> Terrain</h3>
 							<p><strong>Unity | C #</strong></p>
-							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow; Project done, for the GE2023</p>
+							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow; Designed and sculpted a natural open-world terrain featuring hills, clearings, and forests for tactical movement and exploration. <br> &RightArrow; Painted terrain textures and placed dynamic foliage (grass, flowers, trees) to create an immersive and visually diverse environment. <br> &RightArrow; Integrated a player-friendly layout with natural cover and a focal point structure to support combat and level objectives.</p>
 						</div>
 					</a>
 				</div>
