--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 					</a>
 				</div>
 				<div class="col-md-4 text-center d-flex ftco-animate">
-					<a class="services-1 shadow" href="https://github.com/fetbarcelon/"
+					<a class="services-1 shadow" href="https://github.com/fetbarcelon/Knigth"
 						target="_blank" id="project-8">						
 						<div class="desc">
 							<h3 class="mb-4">Knigth </h3>
@@ -260,7 +260,7 @@
 						<div class="desc">
 							<h3 class="mb-4"> C + + </h3>
 							<p><strong> C + + </strong></p>
-							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow; Developed and optimized code modules crucial for game functionality, enhancing overall performance and user experience.</p>
+							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow; Work in progress</p>
 						</div>
 					</a>
 				</div>
@@ -273,7 +273,7 @@
 						<div class="desc">
 							<h3 class="mb-4">The Secret</h3>
 							<p><strong>Unity | C #</strong></p>
-							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow; Project done, by a team of 3 for the GE2023.</p>
+							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow; Designed and decorated an immersive haunted interior environment to support narrative exploration and psychological horror pacing. <br> &RightArrow; Implemented VHS-style post-processing effects and distortion filters to reinforce the retro horror aesthetic. <br> &RightArrow; Integrated interactive objects and scripted player triggers using Blueprints to enhance tension and storytelling through environmental cues.</p>
 						</div>
 					</a>
 				</div>
@@ -292,7 +292,7 @@
 						<div class="desc">
 							<h3 class="mb-4">LOST</h3>
 							<p><strong>Blueprint | Unreal Engine 5</strong></p>
-							<p style="text-align: left;"> &RightArrow; Individual project.<br> &RightArrow; Developed and optimized code modules crucial for game functionality, enhancing overall performance and user experience.<br> &RightArrow; Conducted comprehensive testing procedures and implemented validation protocols, ensuring the robustness and stability of the game's mechanics.<br> &RightArrow; + other tasks.</p>
+							<p style="text-align: left;"> &RightArrow; Individual project.<br> &RightArrow; Developed core first-person shooter mechanics, including player weapon control, HUD elements (ammo, health, grenades), and responsive input handling in a 3D environment. <br> &RightArrow; Designed and optimized a high-fidelity indoor level, implementing reflective surfaces, volumetric lighting, and atmospheric effects to enhance immersion and tension. <br> &RightArrow; Integrated basic AI enemy behavior and level interactions, enabling combat engagement and visual feedback for shooting mechanics. </p>
 						</div>
 					</a>
 				</div>
