--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 					<a class="services-1 shadow" href="https://github.com/fetbarcelon/Knigth"
 						target="_blank" id="project-8">						
 						<div class="desc">
-							<h3 class="mb-4">Knigth </h3>
+							<h3 class="mb-4">Knight </h3>
 							<p><strong> Godot</strong></p>
 							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow; Tasks: Developed smooth player movement with jumping, falling, and responsive state transitions. <br> &RightArrow; Designed and built the first level using a modular tileset, including platforms, gaps, and environmental hazards to challenge the player. <br> &RightArrow; Designed a tile-based level with hazards and built a respawn system for consistent game flow.</p>
 						</div>
