Update The Secret

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 						<div class="desc">
 							<h3 class="mb-4">The Secret</h3>
 							<p><strong>Unity | C #</strong></p>
-							<p style="text-align: left;"> &RightArrow; Individual project. <br> &RightArrow; Coded core player interactions (item pickup, doors, environment triggers) to enhance gameplay flow. <br> &RightArrow; Implemented a responsive first-person controller with sprint, crouch, and camera effects for immersion. <br> &RightArrow; Developed interactive puzzle systems with clear feedback and conditional logic. <br> &RightArrow; Designed scripted scare events and basic enemy logic to support the horror narrative.</p>
+							<p style="text-align: left;"> &RightArrow; Team project. <br> &RightArrow; Coded core player interactions (item pickup, doors, environment triggers) to enhance gameplay flow. <br> &RightArrow; Implemented a responsive first-person controller with sprint, crouch, and camera effects for immersion. <br> &RightArrow; Developed interactive puzzle systems with clear feedback and conditional logic. <br> &RightArrow; Designed scripted scare events and basic enemy logic to support the horror narrative.</p>
 						</div>
 					</a>
 				</div>
