--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta property="og:description" content="Stephania Co. Portfolio Website" >
 	<meta property="og:title" content="Stephania Co." >
 	<meta property="og:type" content="article" >
-	<meta property="og:image" content="https://fetbarcelon.github.io/images/favicon.png" >
+	<meta property="og:image" content="https://fetbarcelon.github.io/favicon.ico" >
 	<meta property="og:url" content="https://fetbarcelon.github.io/">
 	<meta name="author" content="Stephania Co." >
 
