--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<meta property="og:description" content="Stephania Co. Portfolio Website" >
-	<meta property="og:title" content="Stephania Co." >
-	<meta property="og:type" content="article" >
-	<meta property="og:image" content="https://fetbarcelon.github.io/favicon.ico" >
-	<meta property="og:url" content="https://fetbarcelon.github.io/">
-	<meta name="author" content="Stephania Co." >
+	<!-- Open Graph para LinkedIn, Facebook, etc. -->
+<meta property="og:title" content="Stephania Co." />
+<meta property="og:description" content="Stephania Co. Portfolio Website" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://fetbarcelon.github.io/" />
+<meta property="og:image" content="https://fetbarcelon.github.io/favicon.ico" />
+
+<!-- Autor -->
+<meta name="author" content="Stephania Co." />
 
 	<link rel="Shortcut Icon" type="img/favicon" href="/images/Portfolio.png">
 
