--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:description" content="Stephania Co. Portfolio Website" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://fetbarcelon.github.io/" />
-<meta property="og:image" content="https://fetbarcelon.github.io/favicon.ico" />
+<meta property="og:image" content="https://fetbarcelon.github.io/og-image.png" />
 
 <!-- Autor -->
 <meta name="author" content="Stephania Co." />
